# Nlp100

./: LICENSE  Nlp100.cabal  Nlp3.hs  README.md  draft.hs  nlp0.hs  nlp2.hs  nlp3.hs  stack.yaml
app/: Main.hs
src/: Nlp1.hs  Nlp2.hs  Nlp3.hs  Nlp4.hs  draft.hs
src/Zak/: Morph.hs  Utf8.hs
test/: DocTest.hs  Spec.hs
