name:                Nlp100
version:             0.4.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/iruyan-zak/Nlp100#readme
license:             BSD3
license-file:        LICENSE
author:              Iruyan_Zak
maintainer:          yuri.kazuna@gmail.com
copyright:           2016 Iruyan_Zak
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Nlp1, Nlp2, Nlp3, Nlp4, Zak.Utf8, Zak.Morph
  build-depends:
    base,
    containers,
    random,
    directory,
    bytestring,
    regex-posix,
    aeson,
    zlib,
    utf8-string,
    http-conduit,
    gnuplot,
    utility-ht

  default-language:    Haskell2010

executable Nlp100-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, Nlp100
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             DocTest.hs
  build-depends:       base
                     , Nlp100
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Nlp100-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Nlp100
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iruyan-zak/Nlp100
